src/argocd/bootstrap-resources/files/services.yml
apiVersion: v1
kind: Service
metadata:
  name: files
spec:
  selector:
    app.kubernetes.io/name: files
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
