src/argocd/bootstrap-resources/files/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: files
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.ryanb.tv`)
      kind: Rule
      services:
        - name: files
          kind: Service
          port: http
  tls: {}
